updated i18n about home

--- a/i18n/en.yaml
+++ b/i18n/en.yaml
@@ -13,7 +13,7 @@ paige_first:
 paige_history:
   other: History
 paige_home:
-  other: Home
+  other: About
 paige_javascript_is_required:
   other: JavaScript is required
 paige_last:
